--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(coef,geer)
 S3method(confint,geer)
 S3method(fitted,geer)
 S3method(gee_criteria,geer)
+S3method(geer,default)
 S3method(print,geer)
 S3method(print,summary.geer)
 S3method(residuals,geer)
