--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(confint,geer)
 S3method(fitted,geer)
 S3method(gee_criteria,geer)
 S3method(geer,default)
+S3method(predict,geer)
 S3method(print,geer)
 S3method(print,summary.geer)
 S3method(residuals,geer)
@@ -13,18 +14,23 @@ S3method(vcov,geer)
 export(gee_criteria)
 export(geewa)
 export(geewa_binary)
+export(score_test)
 export(wald_test)
 import(Rcpp)
 importFrom(brglm2,brglmFit)
+importFrom(stats,.getXlevels)
 importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,coefficients)
+importFrom(stats,delete.response)
 importFrom(stats,family)
 importFrom(stats,formula)
 importFrom(stats,gaussian)
 importFrom(stats,glm)
 importFrom(stats,model.extract)
+importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
+importFrom(stats,model.offset)
 importFrom(stats,model.response)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
