--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(step_model_selection_p)
 export(wald_test)
 import(Rcpp)
 importFrom(brglm2,brglmFit)
+importFrom(methods,missingArg)
 importFrom(stats,.getXlevels)
 importFrom(stats,add.scope)
 importFrom(stats,add1)
@@ -36,11 +37,13 @@ importFrom(stats,family)
 importFrom(stats,formula)
 importFrom(stats,gaussian)
 importFrom(stats,glm)
+importFrom(stats,glm.fit)
 importFrom(stats,model.extract)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.offset)
 importFrom(stats,model.response)
+importFrom(stats,model.weights)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
 importFrom(stats,printCoefmat)
