250114: added control and weights arguments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(residuals,geer)
 S3method(summary,geer)
 S3method(vcov,geer)
 export(gee_criteria)
+export(geer_control)
 export(geewa)
 export(geewa_binary)
 export(score_test)
@@ -21,6 +22,7 @@ export(step_model_selection_p)
 export(wald_test)
 import(Rcpp)
 importFrom(brglm2,brglmFit)
+importFrom(brglm2,brglm_control)
 importFrom(methods,missingArg)
 importFrom(stats,.getXlevels)
 importFrom(stats,add.scope)
