250318 added methods for geer class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(drop1,geer)
 S3method(fitted,geer)
 S3method(gee_criteria,geer)
 S3method(geer,default)
+S3method(model.matrix,geer)
 S3method(predict,geer)
 S3method(print,geer)
 S3method(print,summary.geer)
