250409: changes to utility functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ S3method(residuals,geer)
 S3method(summary,geer)
 S3method(vcov,geer)
 export(gee_criteria)
-export(geer_control)
+export(geer.control)
 export(geewa)
 export(geewa_binary)
 export(step_model_selection_p)
