--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ S3method(coef,geer)
 S3method(confint,geer)
 S3method(drop1,geer)
 S3method(fitted,geer)
-S3method(gee_criteria,geer)
 S3method(geer,default)
 S3method(model.matrix,geer)
 S3method(predict,geer)
@@ -15,11 +14,11 @@ S3method(print,summary.geer)
 S3method(residuals,geer)
 S3method(summary,geer)
 S3method(vcov,geer)
-export(gee_criteria)
+export(geecriteria)
 export(geer.control)
 export(geewa)
 export(geewa_binary)
-export(step_model_selection_p)
+export(step_p)
 import(Rcpp)
 importFrom(brglm2,brglmFit)
 importFrom(brglm2,brglm_control)
@@ -31,7 +30,10 @@ importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,coefficients)
+importFrom(stats,dbinom)
 importFrom(stats,delete.response)
+importFrom(stats,dnorm)
+importFrom(stats,dpois)
 importFrom(stats,drop.scope)
 importFrom(stats,drop1)
 importFrom(stats,factor.scope)
