250416: tidying up core functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ S3method(residuals,geer)
 S3method(summary,geer)
 S3method(vcov,geer)
 export(geecriteria)
-export(geer.control)
+export(geer_control)
 export(geewa)
 export(geewa_binary)
 export(step_p)
@@ -24,6 +24,7 @@ importFrom(brglm2,brglmFit)
 importFrom(brglm2,brglm_control)
 importFrom(methods,missingArg)
 importFrom(stats,.getXlevels)
+importFrom(stats,Gamma)
 importFrom(stats,add.scope)
 importFrom(stats,add1)
 importFrom(stats,as.formula)
@@ -42,6 +43,7 @@ importFrom(stats,formula)
 importFrom(stats,gaussian)
 importFrom(stats,glm)
 importFrom(stats,glm.fit)
+importFrom(stats,inverse.gaussian)
 importFrom(stats,model.extract)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
@@ -50,6 +52,7 @@ importFrom(stats,model.response)
 importFrom(stats,model.weights)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
+importFrom(stats,poisson)
 importFrom(stats,printCoefmat)
 importFrom(stats,qnorm)
 importFrom(stats,terms)
